# MustWebUI

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yml
docs/: README.md  component-catalog.md  requirements-en.md  spec-architecture.md  spec-dsl.md  spec-rpc-actions.md  spec-security-ops.md  spec-state-proxy.md  task.md
src/mustwebui/: __init__.py
tests/: test_dsl_render.py  test_ssr_integration.py  test_state_proxy.py
