[project]
name = "mustwebui"
version = "0.1.0"
description = "Type-safe Python framework concept for building SSR web applications with FastAPI, Pydantic, and Alpine.js"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "47549972+tohboeh5@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
mustwebui = "mustwebui:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"
