[project]
name = "mustwebui"
version = "0.1.0"
description = "Type-safe Python framework concept for building SSR web applications with FastAPI, Pydantic, and Alpine.js"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "47549972+tohboeh5@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "pydantic==2.10.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff==0.14.10",
    "ty==0.0.8",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[project.scripts]
mustwebui = "mustwebui:main"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]
extend-exclude = [
    ".venv",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ty]

[tool.ty.environment]
python-version = "3.12"
